<resources>
    <string name="app_name">Spying game</string>
    <string name="icone">icone da app</string>
    <string name="titulo_jogo">Spying Game</string>
    <string name="sair_jogo">Sair</string>
    <string name="jogar_jogo">Jogar</string>
    <string name="comecar">começar</string>
    <string name="adicionar">+</string>
    <string name="adiciona_jogador">Adicionar Jogador</string>
    <string name="adicionar_texto">Adicionar Texto</string>
    <string name="nome_dos_jogadores">Nome dos Jogadores:\n</string>
    <string name="jogador_role_title">JOGADOR</string>
    <string name="X_role_title">X</string>
    <string name="proximo_role_btn">Próximo</string>
    <string name="Nome_do_jogador">Nome do Jogador</string>
    <string name="funcao">Função</string>
    <string name="pronto" />
    <string name="prontoo">Pronto</string>
    <string name="role_subtitulo">Para continuar pressione o botão abaixo</string>
    <string name="role_titulo">PÁGINA DE ESPERA</string>
    <string name="titulo_resultado">VENCEDORES!</string>
    <string name="exemplo_jogadores_resultado">Jogador1\nJogador2</string>
    <string name="novo_jogo_resultado">Novo Jogo</string>
    <string name="pagina_inicial_resultado">Página Inicial</string>
    <string name="local">Local</string>
    <string name="sou_eu">Sou Eu</string>
    <string name="palpite">Palpite</string>
    <string name="pergunta_feita">Pergunta Feita</string>
    <string name="tua_vez">É A TUA VEZ</string>
    <string name="opcao_1">Opção 1</string>
    <string name="opcao_2">Opção 2</string>
    <string name="opcao_3">Opção 3</string>
    <string name="opcao_4">Opção 4</string>
    <string name="opcao_5">Opção 5</string>
    <string name="escolha_local">Escolha a localização certa</string>
    <string name="confirmar">Confirmar</string>
    <string name="reunion_title">Escolha o jogador que pretende eliminar</string>
    <string name="reunion_subtitle">Caso não queira eliminar ninguem, selecionar "0"</string>
    <string name="empty">" "</string>
    <string name="rule_btn_text">Entendi</string>
    <string name="rule_title">Regras do jogo</string>
    <string name="_1_inicialmente_vai_ser_atribuido_a_cada_jogador_uma_fun_o">1. Inicialmente vai ser atribuido a cada jogador uma função.</string>
    <string name="_2_o_objetivo_dos_espi_es_descobrir_o_local">2. O objetivo dos Espiões é descobrir o local.</string>
    <string name="_3_o_objetivo_dos_investigadores_descobrir_todos_os_espi_es">3. O objetivo dos Investigadores é descobrir todos os Espiões.</string>
    <string name="_4_a_qualquer_momento_do_jogo_o_espi_o_pode_dar_um_palpite_do_local_na_se_acertar_o_jogador_vencer_sen_o_expulso">4. A qualquer momento do jogo o Espião pode dar um palpite do local na 🔎, se acertar o jogador vencer senão é expulso.</string>
    <string name="_5_o_jogo_acaba_caso_n_o_restarem_mais_espi_es_ou_se_restarem_apenas_2_jogadores">5. O jogo acaba caso não restarem mais Espiões ou se restarem apenas 2 jogadores.</string>
    <string name="remover_jogador">-</string>
</resources>